fix: magnifier issue on iOS (#7778)
fix: magnifier issue on iOS

--- a/tldraw/apps/tldraw-logseq/src/styles.css
+++ b/tldraw/apps/tldraw-logseq/src/styles.css
@@ -27,6 +27,11 @@
   backface-visibility: hidden;
 }
 
+.logseq-tldraw *:not(.tl-logseq-portal-container) * {
+  -webkit-touch-callout: none;
+  user-select: none;
+}
+
 .dark-theme,
 html[data-theme='dark'] {
   --ls-wb-background-color-gray: var(--color-gray-800, gray);
